--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/blopez.svg" />
+    <!-- Descripción -->
+    <meta name="description" content="Portafolio de Bryan Lopez" />
+    <!-- //Palabras clave -->
+    <meta name="keywords" content="Portafolio, Bryan Lopez, Desarrollador Web" />
+    <!-- //Autor -->
+    <meta name="author" content="Bryan Lopez" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
