agregando palabras a keywords

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/blopez.svg" />
     <!-- Descripción -->
-    <meta name="description" content="Portafolio de Bryan Lopez" />
+    <meta name="description" content="Portafolio de bryan lopez sanchez" />
     <!-- //Palabras clave -->
-    <meta name="keywords" content="Portafolio, Bryan Lopez, Desarrollador Web" />
+    <meta name="keywords" content="portafolio, bryan lopez sanchez, desarrollador Web, backend, fronend" />
     <!-- //Autor -->
-    <meta name="author" content="Bryan Lopez" />
+    <meta name="author" content="Bryan Lopez Sanchez" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
